# know-my-devs

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-test.txt
knowmydevs/: __init__.py  app.py  app_logger.py
knowmydevs/auth/payloads/: __init__.py
knowmydevs/auth/payloads/auth/: __init__.py  token_credential.py  token_form.py
knowmydevs/auth/responses/: __init__.py
knowmydevs/auth/responses/auth/: __init__.py  token_response.py
knowmydevs/auth/routers/: routers.py
knowmydevs/auth/routers/v1/: auth.py  routers.py
knowmydevs/auth/services/: auth_service.py
knowmydevs/core/: config.py
knowmydevs/core/auth/: __init__.py  cognito.py  kms.py  token.py
knowmydevs/core/auth/models/: __init__.py  app_client.py  token.py
knowmydevs/core/errors/: __init__.py  bad_request_error.py  base_error.py  internal_error.py  not_found_error.py  unauthorized_error.py
knowmydevs/core/handlers/: bad_request_handler.py  error_handler.py  internal_error_handler.py  not_found_handler.py  unauthorized_handler.py
knowmydevs/core/infra/db/: __init__.py  postgres.py
knowmydevs/core/infra/events/: fastapi_lifespan.py
knowmydevs/core/observability/: logfire_app.py  sentry.py
knowmydevs/core/utils/: date_utils.py  str_utils.py
knowmydevs/github/: __init__.py
knowmydevs/github/domain/: __init__.py  app_client.py  discussion.py  historical_data.py  installation.py  pull_request.py  pull_request_state.py  pull_request_status.py  user.py
knowmydevs/github/payloads/discussions/: __init__.py  create_discussion_payload.py  update_discussion_payload.py
knowmydevs/github/payloads/prs/: __init__.py  create_pr_payload.py  update_pr_payload.py
knowmydevs/github/responses/: __init__.py
knowmydevs/github/responses/discussions/: __init__.py  discussion_created_response.py  discussion_response.py  discussion_updated_response.py
knowmydevs/github/responses/prs/: __init__.py  pull_request_response.py
knowmydevs/github/responses/stats/: __init__.py  discussion_stats_response.py  pull_request_stats_response.py
knowmydevs/github/routers/: routers.py
knowmydevs/github/routers/v1/: discussions.py  prs.py  routers.py  stats.py  webhooks.py
knowmydevs/github/schemas/webhooks/: __init__.py  author_association_enum.py  hypermedia_link.py  installation.py  label.py  merge_method_enum.py  milestone.py  milestone_state_enum.py  permission.py  team.py  user.py
knowmydevs/github/services/: app_client_service.py  historical_data_service.py  user_service.py
knowmydevs/github/services/discussions/: discussions_service.py
knowmydevs/github/services/pull_requests/: pr_service.py
knowmydevs/github/services/stats/: discussion_service.py  pr_service.py
knowmydevs/github/services/webhooks/: discussion_service.py  github_service.py  installation_service.py  pull_request_service.py  webhook_service.py
knowmydevs/github/sync/: auth.py  main.py
tests/core/utils/: str_utils_test.py
(+24 files in other folders)
