[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'knowmydevs/version.py'

[project]
name = 'knowmydevs'
description = 'Statistics and Usage for github repositories and organizations'
authors = [
    { name = 'Rafael de Oliveira Marques', email = 'rafaelomarques@gmail.com' },
]
license = 'MIT'
readme = 'README.md'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Operating System :: Microsoft',
    'Topic :: Internet',
]
requires-python = '>=3.12'
dependencies = [
    'fastapi[standard]>=0.115.4, <1.0.0',
    'gh-hooks-utils>=0.3.0, <1.0.0',
    'httptools>=0.6.4, < 1.0.0',
    'logfire>=2.1.1, <3.0.0',
    'psycopg2>=2.9.10, <3.0.0',
    'pydantic>=2.9.2, <3.0.0',
    'pydantic-settings>=2.6.1, <3.0.0',
    'sentry-sdk>=2.17.0, <3.0.0',
    'sqlmodel>=0.0.22, <1.0.0',
    'tenacity>=9.0.0, <10.0.0'
]
dynamic = ['version']

[project.urls]
Homepage = "https://github.com/ceb10n/knowmydevs"
Documentation = "https://ceb10n.github.io/knowmydevs/"
Repository = "https://github.com/ceb10n/knowmydevs"

[tool.pytest.ini_options]
testpaths = 'tests'
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "ERROR"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ['knowmydevs']
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
precision = 2

[tool.coverage.paths]
source = ['knowmydevs/']

[tool.ruff]
line-length = 80
target-version = 'py312'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I']
flake8-quotes = { inline-quotes = 'double', multiline-quotes = 'double' }
isort = { known-first-party = ['knowmydevs', 'tests'] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.ruff.format]
quote-style = 'double'
indent-style = 'space'

[tool.mypy]
python_version = '3.12'
show_error_codes = true
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
